--- a/style/upload.css
+++ b/style/upload.css
@@ -6,7 +6,7 @@
     width: 80vw;
     height: 80vh;
 
-    color: orange;
+    color: var(--color);
     border: .75rem dashed;
 
     font-size: 3rem;
@@ -26,7 +26,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: orange;
+    color: var(--color);
     font-size: 1.25rem;
     margin-left: calc(1.25rem / 2);
     text-align: center;
@@ -39,16 +39,16 @@
 }
 
 .upload-default::-webkit-file-upload-button {
-    border: 2px solid orange;
+    border: 2px solid var(--color);;
     background-color: transparent;
     padding: .5rem;
-    color: orange;
+    color: var(--color);
     font-weight: bold;
     outline: none;
 }
 
 .upload-default::-webkit-file-upload-button:hover{
-    background-color: orange;
+    background-color: var(--color);
     color: white;
     cursor: pointer;
 }
